--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opennextjs/aws": "https://pkg.pr.new/@opennextjs/aws@941",
     "dotenv": "^17.0.0",
     "dotenv-cli": "^8.0.0",
     "next": "15.4.4",
